// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list changes considering parents adds changes for dependency 1`] = `
Object {
  "changes": Object {
    "changes": undefined,
    "releases": Object {
      "all": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [
          "yarn-workspace-base-pkg-a",
          "yarn-workspace-base-pkg-b",
        ],
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
      "yarn-workspace-base-pkg-a": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [],
        "path": undefined,
        "pkg": "all",
        "type": "patch",
      },
      "yarn-workspace-base-pkg-b": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [
          "yarn-workspace-base-pkg-a",
        ],
        "path": undefined,
        "pkg": "all",
        "type": "patch",
      },
    },
  },
  "consoleDir": Array [],
  "consoleLog": Array [],
}
`;

exports[`list changes considering parents bumps patch due to dependency bump 1`] = `
Object {
  "changes": Object {
    "changes": undefined,
    "releases": Object {
      "all": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [
          "yarn-workspace-base-pkg-a",
          "yarn-workspace-base-pkg-b",
        ],
        "path": undefined,
        "pkg": "all",
        "type": "minor",
      },
      "yarn-workspace-base-pkg-a": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [],
        "path": undefined,
        "pkg": "all",
        "type": "patch",
      },
      "yarn-workspace-base-pkg-b": Object {
        "dependencies": undefined,
        "manager": "javascript",
        "parents": Array [
          "yarn-workspace-base-pkg-a",
        ],
        "path": undefined,
        "pkg": "all",
        "type": "patch",
      },
    },
  },
  "consoleDir": Array [],
  "consoleLog": Array [],
}
`;

exports[`list changes considering parents rolls up the parent bumps 1`] = `
Object {
  "changes": Object {
    "changes": undefined,
    "releases": Object {
      "pkg-a": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": "Bumped due to a bump in pkg-c.",
            },
            "releases": Object {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
        ],
        "parents": Array [
          "pkg-overall",
        ],
        "type": "patch",
      },
      "pkg-b": Object {
        "changes": Array [
          Object {
            "meta": Object {},
            "releases": Object {
              "pkg-b": "minor",
            },
            "summary": "The pkg-b doesn't have a dep bump, but can dep bump pkg-a and pkg-overall with a patch.",
          },
        ],
        "parents": Array [
          "pkg-overall",
        ],
        "type": "minor",
      },
      "pkg-c": Object {
        "changes": Array [
          Object {
            "meta": Object {},
            "releases": Object {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
        ],
        "parents": Array [
          "pkg-a",
        ],
        "type": "patch",
      },
      "pkg-d": Object {
        "changes": Array [
          Object {
            "meta": Object {},
            "releases": Object {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
        ],
        "parents": Array [
          "pkg-c",
          "pkg-four",
        ],
        "type": "major",
      },
      "pkg-four": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": "Bumped due to a bump in pkg-d.",
            },
            "releases": Object {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
        ],
        "parents": Array [
          "pkg-three",
        ],
        "type": "patch",
      },
      "pkg-one": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": "Bumped due to a bump in pkg-two.",
            },
            "releases": Object {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
        ],
        "parents": Array [],
        "type": "patch",
      },
      "pkg-overall": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": "Bumped due to a bump in pkg-b.",
            },
            "releases": Object {
              "pkg-b": "minor",
            },
            "summary": "The pkg-b doesn't have a dep bump, but can dep bump pkg-a and pkg-overall with a patch.",
          },
        ],
        "parents": Array [],
        "type": "patch",
      },
      "pkg-three": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": "Bumped due to a bump in pkg-four.",
            },
            "releases": Object {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
        ],
        "parents": Array [
          "pkg-two",
        ],
        "type": "patch",
      },
      "pkg-two": Object {
        "changes": Array [
          Object {
            "meta": Object {
              "dependencies": "Bumped due to a bump in pkg-three.",
            },
            "releases": Object {
              "pkg-c": "patch",
              "pkg-d": "major",
            },
            "summary": "This should patch bump up the pkg-[number] line to where pkg-one also receives a bump. The pkg-c writes to a patch so we patch bump up that line too.",
          },
        ],
        "parents": Array [
          "pkg-one",
        ],
        "type": "patch",
      },
    },
  },
  "consoleDir": Array [],
  "consoleLog": Array [],
}
`;

exports[`package file apply bump bumps multi js json 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping yarn-workspace-base-pkg-a with minor",
    ],
    Array [
      "bumping yarn-workspace-base-pkg-b with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml as minor with object dep missing patch 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml as minor with object dep without version number 1`] = `
Object {
  "consoleError": Array [
    Array [
      "It appears that a dependency within this repo does not have a version specified.",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml as patch with object dep missing patch 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with patch",
    ],
    Array [
      "bumping rust_pkg_b_fixture with patch",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml with dep missing patch 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps multi rust toml with object dep 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust_pkg_a_fixture with minor",
    ],
    Array [
      "bumping rust_pkg_b_fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps single js json 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping js-single-json-fixture with minor",
    ],
  ],
}
`;

exports[`package file apply bump bumps single rust toml 1`] = `
Object {
  "consoleDir": Array [],
  "consoleLog": Array [
    Array [
      "bumping rust-single-fixture with minor",
    ],
  ],
}
`;
